--- a/src/Resources/views/Action/obtain_payment_method_nonce_hf.html.twig
+++ b/src/Resources/views/Action/obtain_payment_method_nonce_hf.html.twig
@@ -120,7 +120,7 @@
                                 <input type="text" id="ach-billingAddress" class="form-control">
                             </div>
 
-                            <button id="bank-login-button" class="btn btn-default">Checkout</button>
+                            <button id="bank-login-button" class="btn btn-primary">Checkout</button>
                         </div>
                     </div>
                 </div>
