added checking of USA for ACH

--- a/src/Resources/views/Action/obtain_payment_method_nonce_hf.html.twig
+++ b/src/Resources/views/Action/obtain_payment_method_nonce_hf.html.twig
@@ -194,7 +194,7 @@
                 };
                 document.dispatchEvent(billingEvent);
 
-                if (billingEvent.address.countryName !== 'United States of America') {
+                if (['United States of America', 'USA'].indexOf(billingEvent.address.countryName) === -1) {
                     ACHEnabled = false;
                     braintreeAchDirect.innerHTML = 'Not available for your country';
                 }
