Fixed bug with cardholder name

--- a/src/Resources/views/Action/obtain_payment_method_nonce_hf.html.twig
+++ b/src/Resources/views/Action/obtain_payment_method_nonce_hf.html.twig
@@ -498,7 +498,7 @@
                             cardBrandButton.disabled = true;
 
                             hostedFieldsInstance.tokenize({
-                                cardholderName: document.querySelector('#cc-name')
+                                cardholderName: document.querySelector('#cc-name').value
                             }, function(tokenizeErr, payload) {
                                 if (tokenizeErr) {
                                     fireBraintreeError(tokenizeErr);
